--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -23,7 +23,13 @@
     "@angular/router": "^18.2.2",
     "@angular/ssr": "^18.2.2",
     "@fontsource-variable/inter": "^5.0.20",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/lucide": "^29.5.0",
     "@spartan-ng/ui-core": "0.0.1-alpha.353",
+    "@spartan-ng/ui-form-field-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-forms-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-label-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-select-brain": "0.0.1-alpha.353",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "express": "^4.18.2",
