--- a/todo_list/tsconfig.json
+++ b/todo_list/tsconfig.json
@@ -22,6 +22,15 @@
       "dom"
     ],
     "paths": {
+      "@spartan-ng/ui-icon-helm": [
+        ".\\src/app/shared/libs/ui/ui-icon-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-formfield-helm": [
+        ".\\src/app/shared/libs/ui/ui-formfield-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-select-helm": [
+        ".\\src/app/shared/libs/ui/ui-select-helm/src/index.ts"
+      ]
     }
   },
   "angularCompilerOptions": {
