--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -52,6 +52,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ngx-drag-drop": "^18.0.2",
     "postcss": "^8.4.41",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.10",
