add cdk drag and drop

--- a/todo_list/tsconfig.json
+++ b/todo_list/tsconfig.json
@@ -30,6 +30,9 @@
       ],
       "@spartan-ng/ui-select-helm": [
         ".\\src/app/shared/libs/ui/ui-select-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-badge-helm": [
+        ".\\src/app/shared/libs/ui/ui-badge-helm/src/index.ts"
       ]
     }
   },
