--- a/todo_list_backend/package.json
+++ b/todo_list_backend/package.json
@@ -31,6 +31,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
