--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -35,6 +35,8 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "express": "^4.18.2",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
