filter by category and fix drag and drop bugs

--- a/todo_list_backend/.env.example
+++ b/todo_list_backend/.env.example
@@ -3,11 +3,11 @@ PORT = 3000
 
 # DATABASE
 DB_DATABASE = todo_list
-DB_USER = admin
-DB_PASSWORD = test1234
+DB_USER =
+DB_PASSWORD =
 
 # TOKEN
-SECRET_KEY = secretKey
+SECRET_KEY =
 
 # LOG
 LOG_FORMAT = dev
