--- a/todo_list_backend/.gitignore
+++ b/todo_list_backend/.gitignore
@@ -4,6 +4,10 @@ logs
 package-lock.json
 .pnpm-debug.log*
 
+.env.test.local
+.env.development.local
+.env.production.local
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
