--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -25,6 +25,7 @@
     "@fontsource-variable/inter": "^5.0.20",
     "@ng-icons/core": "^25.1.0",
     "@ng-icons/lucide": "^29.5.0",
+    "@spartan-ng/ui-avatar-brain": "0.0.1-alpha.353",
     "@spartan-ng/ui-core": "0.0.1-alpha.353",
     "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.353",
     "@spartan-ng/ui-form-field-brain": "0.0.1-alpha.353",
