--- a/todo_list_backend/tsconfig.json
+++ b/todo_list_backend/tsconfig.json
@@ -7,7 +7,6 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "module": "commonjs",
     "pretty": true,
@@ -19,6 +18,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "importHelpers": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
