--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=${ENVIRONMENT} --aot",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:todo_list": "node dist/todo_list/server/server.mjs"
