--- a/todo_list/tsconfig.json
+++ b/todo_list/tsconfig.json
@@ -21,29 +21,7 @@
       "ES2022",
       "dom"
     ],
-    "paths": {
-      "@spartan-ng/ui-icon-helm": [
-        ".\\src/app/shared/libs/ui/ui-icon-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-formfield-helm": [
-        ".\\src/app/shared/libs/ui/ui-formfield-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-select-helm": [
-        ".\\src/app/shared/libs/ui/ui-select-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-badge-helm": [
-        ".\\src/app/shared/libs/ui/ui-badge-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-sheet-helm": [
-        ".\\src/app/shared/libs/ui/ui-sheet-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-label-helm": [
-        ".\\src/app/shared/libs/ui/ui-label-helm/src/index.ts"
-      ],
-      "@spartan-ng/ui-avatar-helm": [
-        ".\\src/app/shared/libs/ui/ui-avatar-helm/src/index.ts"
-      ]
-    }
+    "paths": {}
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
