--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -40,6 +40,7 @@
     "ngx-lottie": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vercel": "^37.9.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
