--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^12.0.0",
+    "primeng": "^18.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "vercel": "^37.9.0",
