--- a/todo_list/package.json
+++ b/todo_list/package.json
@@ -33,6 +33,7 @@
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.353",
     "@spartan-ng/ui-select-brain": "0.0.1-alpha.353",
     "@spartan-ng/ui-sheet-brain": "0.0.1-alpha.353",
+    "@spartan-ng/ui-tooltip-brain": "0.0.1-alpha.353",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "express": "^4.18.2",
